Swagger -- ok Dashboard -- ok

--- a/FFMpegCore.WebApi/FFMpegCore.WebApi.csproj
+++ b/FFMpegCore.WebApi/FFMpegCore.WebApi.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>d99c6ddf-ca36-4b66-aca8-2f8fe177ee7c</UserSecretsId>
@@ -10,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="FFMpegCore.Extensions.System.Drawing.Common" Version="5.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.11" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="NLog.Extensions.Logging" Version="5.3.15" />
