--- a/FFMpegCore.WebApi/appsettings.json
+++ b/FFMpegCore.WebApi/appsettings.json
@@ -1,4 +1,16 @@
 {
+  "Jwt": {
+    "Key": "YourSuperSecretKeyHere",
+    "Issuer": "FFMpegCore.WebApi",
+    "Audience": "FFMpegCore.WebApiUsers",
+    "TokenLifetimeMinutes": 60
+  },
+  "ApiKeySettings": {
+    "Key": "YourSecureApiKeyHere"
+  },
+  "Swagger": {
+    "Enabled": true
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Trace",
