--- a/FFMpegCore.WebApi/appsettings.json
+++ b/FFMpegCore.WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Jwt": {
-    "Key": "YourSuperSecretKeyHere",
+    "Key": "Wu0BJHZkj+kd8PQYV4mZm4hrGpI8eKhAZWzdRFS3VHo=",
     "Issuer": "FFMpegCore.WebApi",
     "Audience": "FFMpegCore.WebApiUsers",
     "TokenLifetimeMinutes": 60
