--- a/FFMpegCore.WebApi/NLog.config
+++ b/FFMpegCore.WebApi/NLog.config
@@ -1,15 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" autoReload="true" throwConfigExceptions="true">
+<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      autoReload="true"
+      throwConfigExceptions="true"
+      internalLogLevel="Warn"
+      internalLogFile="internal-nlog.txt">
+
   <targets>
-    <!-- Log to a file -->
-    <target xsi:type="File" name="file" fileName="logs/app-${shortdate}.log" layout="${longdate}|${level:uppercase=true}|${logger}|${message} ${exception:format=toString}" />
-    <!-- Log to the console -->
-    <target xsi:type="Console" name="console" layout="${longdate}|${level:uppercase=true}|${logger}|${message} ${exception:format=toString}" />
+    <!-- Write logs to a file -->
+    <target xsi:type="File" name="file" fileName="logs/logfile.txt"
+            layout="${longdate} ${uppercase:${level}} ${message} ${exception:format=toString,stacktrace}" />
+
+    <!-- Write logs to the console -->
+    <target xsi:type="Console" name="console" />
   </targets>
+
   <rules>
-    <!-- Log all levels to file -->
-    <logger name="*" minlevel="Trace" writeTo="file" />
-    <!-- Log warnings and above to console -->
-    <logger name="*" minlevel="Warn" writeTo="console" />
+    <!-- Log everything to the console -->
+    <logger name="*" minlevel="Trace" writeTo="console" />
+    <!-- Log everything to the file -->
+    <logger name="*" minlevel="Info" writeTo="file" />
   </rules>
 </nlog>
