login and sidebar

--- a/FFMpegCore.WebApi/appsettings.Development.json
+++ b/FFMpegCore.WebApi/appsettings.Development.json
@@ -1,4 +1,10 @@
 {
+  "Jwt": {
+    "Key": "fE84he8$45@9plKzM0Nq!xRvtD6Jw7YB",
+    "Issuer": "DevApp",
+    "Audience": "DevAppUsers",
+    "TokenLifetimeMinutes": 60
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
