--- a/FFMpegCore.WebApi/appsettings.json
+++ b/FFMpegCore.WebApi/appsettings.json
@@ -1,8 +1,8 @@
 {
   "Jwt": {
-    "Key": "Wu0BJHZkj+kd8PQYV4mZm4hrGpI8eKhAZWzdRFS3VHo=",
-    "Issuer": "FFMpegCore.WebApi",
-    "Audience": "FFMpegCore.WebApiUsers",
+    "Key": "fE84he8$45@9plKzM0Nq!xRvtD6Jw7YB",
+    "Issuer": "YourApp",
+    "Audience": "YourAppUsers",
     "TokenLifetimeMinutes": 60
   },
   "ApiKeySettings": {
